# maquinay

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: README.md
examples/: README.md  ejemplo_basico.py
scripts/: run_tests.sh
src/maquinay/: __init__.py  core.py
tests/: __init__.py  conftest.py  test_core.py
